--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "issues": "http://github.com/Innmind/RestClientBundle/issues"
     },
     "require": {
-        "php": "~7.0"
+        "php": "~7.0",
+        "innmind/rest-client": "dev-develop"
     },
     "autoload": {
         "psr-4": {
