add transport definition

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: 'formats.yml' }
+    - { resource: 'transport.yml' }
 
 services:
     innmind_rest_client.definition.types:
