--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,11 @@
         "psr-4": {
             "Tests\\Innmind\\Rest\\ClientBundle\\": "tests/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~6.0"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit --colors=always"
     }
 }
