--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "innmind/rest-client": "~3.0",
         "symfony/http-kernel": "~3.0",
         "symfony/dependency-injection": "~3.0",
-        "symfony/config": "~3.0"
+        "symfony/config": "~3.0",
+        "symfony/yaml": "~3.0"
     },
     "autoload": {
         "psr-4": {
