--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -39,7 +39,7 @@ services:
         arguments:
             - '@innmind_rest_client.serializer.normalizer.definition'
 
-    innmind_rest_client.filesystem: '@innmind_rest_client.filesystem.cache'
+    innmind_rest_client.filesystem: '@innmind_rest_client.filesystem.silence_removal_exception'
 
     innmind_rest_client.filesystem.default:
         class: Innmind\Filesystem\Adapter\FilesystemAdapter
@@ -52,3 +52,9 @@ services:
         public: false
         arguments:
             - '@innmind_rest_client.filesystem.default'
+
+    innmind_rest_client.filesystem.silence_removal_exception:
+        class: Innmind\Filesystem\Adapter\SilenceRemovalExceptionAdapter
+        public: false
+        arguments:
+            - '@innmind_rest_client.filesystem.cache'
